[feat] Add JDK 27 support and fix cross-JDK JVMCI handling in llama-tornado